[ash-md] Fixes clipping of controls in system tray

BUG=664244
TEST=manual - add more VPN rows, connect one, scroll up to make sure the "Disconnect" button is stacked below the main header row.
TEST=manual - Scroll Wi-Fi detailed page up so that the toggle is half-way below the header row. Press mouse, verify that the ripple is clipped byt the header row.

Review-Url: https://codereview.chromium.org/2500493004
Cr-Commit-Position: refs/heads/master@{#431708}

Former-commit-id: eb7063bbe11432014548bddea36ce68fe2b36dd5